--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,45 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INCHAPIN</title>
+    <meta name="theme-color" content="#fff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="shortcut icon" href="images/favicons/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons//apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons//favicon-16x16.png">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/pages/index/main.css">
 </head>
 <body>
 @@include('components/header/header.html', {})
 <main>
-    <h1 class="visually-hidden">Каталог товаров</h1>
-    <picture>
-        <source
-                srcset="images/hero__img.png 1x, ../images/hero__img@2x.png 2x"
-        />
-        <img
-                src="images/hero__img.png"
-                alt="Декоративная картинка"
-                class="hero__img"
-        />
-    </picture>
+    <section class="hero">
+        <div class="hero__container container">
+            <p>текст hero</p>
+            <picture>
+                <source
+                        srcset="images/hero__img.png 1x, ../images/hero__img@2x.png 2x"
+                />
+                <img
+                        src="images/hero__img.png"
+                        alt="Декоративная картинка"
+                        class="hero__img"
+                />
+            </picture>
+        </div>
+    </section>
+    <section class="about">
+        <div class="about__container container">
+            <p>текст about</p>
+        </div>
+    </section>
 </main>
 @@include('components/callForm/callForm.html', {})
 <script src="js/main.js"></script>
