--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
             <p>текст hero</p>
             <picture>
                 <source
-                        srcset="images/hero__img.png 1x, ../images/hero__img@2x.png 2x"
+                        srcset="images/hero-img.png 1x, ../images/hero-img@2x.png 2x"
                 />
                 <img
-                        src="images/hero__img.png"
+                        src="images/hero-img.png"
                         alt="Декоративная картинка"
                         class="hero__img"
                 />
