add choices-styles-reset text

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 />
             </picture>
             <div class="hero__content content">
-                <p class="hero__title">Дом бизнес-класса для&nbsp;ценителей роскоши</p>
+                <p class="hero__content-title">Дом бизнес-класса для&nbsp;ценителей роскоши</p>
                 <img
                         src="images/hero-figure.svg"
                         alt="INCHAPIN"
